--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,5 +1,16 @@
-<h1>New Page</h1>
+<body class="page">
+  <div class="row">
+    <div class="col-md-1">
+      <%= link_to "HOME", root_path %>
+    </div>
+  </div>
 
-<%= render 'form' %>
+  <br>
 
-<%= link_to 'Back', pages_path %>
+  <div class="row">
+    <div class="col-md-12">
+      <%= render 'form' %>
+    </div>
+  </div>
+</body>
+
