--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -11,11 +11,9 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :body %><br>
-    <%= f.text_area :body %>
-  </div>
+  <%= f.trix_editor :body, class: "trix-content" %>
+
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "S", class: "btn btn-primary btn-circle btn-lg active" %>
   </div>
 <% end %>
