--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,27 +1,27 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-md-2">
+    <%= link_to 'P', new_page_path, class: "btn btn-primary btn-circle btn-lg active" %>
+  </div>
+  <p id="notice"><%= notice %></p>
+  <table>
+    <tbody>
+      <% @pages.each do |page| %>
+        <tr>
+          <td>
+            <div class="col-md-8">
+              <%= link_to 'View', page %>
+              <%= link_to 'Edit', edit_page_path(page) %>
+              <%= link_to 'Destroy', page, method: :delete, data: { confirm: 'Are you sure?' } %>
+              <br><br />
+              <%= page.body.html_safe %>
+              <hr>
+            </div>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
-<h1>Listing Pages</h1>
+  
 
-<table>
-  <thead>
-    <tr>
-      <th>Body</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @pages.each do |page| %>
-      <tr>
-        <td><%= page.body %></td>
-        <td><%= link_to 'Show', page %></td>
-        <td><%= link_to 'Edit', edit_page_path(page) %></td>
-        <td><%= link_to 'Destroy', page, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Page', new_page_path %>
