--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -2,6 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+/***Background***/
+body.page {
+  background-color: #f1f1f1;
+}
+
 /***Trix***/
 
 .trix-content {
@@ -14,6 +19,24 @@
   outline: none;
 }
 
-body.page {
-  background-color: #f1f1f1;
+/***Content***/
+
+.articlesplit {
+  width: auto;
+  max-width: 100%;
+  height: 1px;
+  background-color: #f0f0f0;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  display: block;
+  clear: both;
 }
+
+.time {
+  font-weight: 900;
+}
+
+
+
+
+
