--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,6 +1,14 @@
-<h1>Editing Page</h1>
+<body class="page">
+  <div class="row">
+    <div class="col-md-1">
+      <%= link_to "HOME", root_path %>
+    </div>
+  </div>
+  <br><br />
+  <div class="row">
+    <div class="col-md-9 col-md-offset-1">
+      <%= render 'form' %>
+    </div>
+  </div>
+</div>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @page %> |
-<%= link_to 'Back', pages_path %>
