--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,26 +2,29 @@
   <div class="col-md-2">
     <%= link_to 'P', new_page_path, class: "btn btn-primary btn-circle btn-lg active" %>
   </div>
-  <p id="notice"><%= notice %></p>
-  <table>
-    <tbody>
-      <% @pages.each do |page| %>
-        <tr>
-          <td>
-            <div class="col-md-8">
-              <%= link_to 'View', page %>
-              <%= link_to 'Edit', edit_page_path(page) %>
-              <%= link_to 'Destroy', page, method: :delete, data: { confirm: 'Are you sure?' } %>
-              <br><br />
-              <%= page.body.html_safe %>
-              <hr>
-            </div>
-          </td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+  <div class="col-md-offset-11">
+    <p><%= link_to "LOGOUT", destroy_user_session_path, method: :delete %></p>
+    <p><%= link_to "SETTINGS", edit_user_registration_path %><p>
+  </div>
 </div>
+
+
+<% @pages.each do |page| %>
+  <div class="row">
+    <div class="col-md-10 col-md-offset-2">
+      <div class="col-md-8">
+        <%= link_to 'VIEW', page %> |
+        <%= link_to 'EDIT', edit_page_path(page) %> |
+        <%= link_to 'DELETE', page, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <br><br />
+        <p class="time text-muted"><%= page.created_at.strftime("%b %d, %Y") %></p>
+        <%= page.body.html_safe %>
+        <hr class="articlesplit"></hr>
+      </div>
+    </div>
+  </div>
+<% end %>
+  
 
   
 
