--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -8,7 +8,7 @@
   <br>
 
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-9 col-md-offset-1">
       <%= render 'form' %>
     </div>
   </div>
