--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,9 +1,17 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-md-1">
+    <p><%= link_to "HOME", root_path %></p>
+    <p><%= link_to 'EDIT', edit_page_path(@page) %></p>
+  </div>
+</div>
 
-<p>
-  <strong>Body:</strong>
-  <%= @page.body %>
-</p>
+<div class="row">
+  <div class="col-md-9 col-md-offset-1">
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+    <%= @page.body.html_safe %>
+  </div>
+</div>
 
-<%= link_to 'Edit', edit_page_path(@page) %> |
-<%= link_to 'Back', pages_path %>
+
+
