--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,11 @@
+
 <div class="row">
   <div class="col-md-2">
-    <%= link_to 'P', new_page_path, class: "btn btn-primary btn-circle btn-lg active" %>
+    <% if current_user_subscribed? %>
+      <%= link_to 'P', new_page_path, class: "btn btn-primary btn-circle btn-lg active" %>
+    <% else %>
+      <%= link_to "Subscribe to start writing", new_subscription_path %>
+    <% end %>
   </div>
   <div class="col-md-offset-11">
     <p><%= link_to "LOGOUT", destroy_user_session_path, method: :delete %></p>
