--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -29,7 +29,7 @@
         <input type="text" size="4" data-stripe="exp-year"/>
       </div>
 
-      <button type="button" class="btn btn-success">Submit Payment</button>
+      <button type="submit" class="btn btn-success">Submit Payment</button>
     <% end %>
   </div>
 </div>
