Added Auto-save feature with ajax and javascript

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -19,6 +19,10 @@ body.page {
   outline: none;
 }
 
+.save-message {
+  font-weight: bold;
+}
+
 /***Content***/
 
 .articlesplit {
@@ -35,6 +39,7 @@ body.page {
 .time {
   font-weight: 900;
 }
+
 
 
 
