--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,12 +6,12 @@
   <%= javascript_include_tag 'application', 'https://js.stripe.com/v2/', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <%= tag :meta, name: "stripe-key", content: ENV["stripe_publishable_key"] %>
+  <%= yield(:head) if content_for?(:head) %>
 </head>
-<body>
+<body class="<%= controller_name_action_name %>">
 
   <div class="container">
     <%= yield %>
   </div>
-
 </body>
 </html>
