--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,17 +1,33 @@
 
 <div class="row">
-  <div class="col-md-2">
+  <div class="col-md-1">
     <% if current_user_subscribed? %>
       <%= link_to 'P', new_page_path, class: "btn btn-primary btn-circle btn-lg active" %>
     <% else %>
       <%= link_to "Subscribe to start writing", new_subscription_path %>
     <% end %>
+    <br><br />
+    <%= link_to "HOME", root_path %>
   </div>
+
   <div class="col-md-offset-11">
     <p><%= link_to "LOGOUT", destroy_user_session_path, method: :delete %></p>
     <p><%= link_to "SETTINGS", edit_user_registration_path %><p>
   </div>
 </div>
+
+<div class="row">
+  <div class="col-md-10 col-md-offset-2">
+    <div class="col-md-8 search">
+      <%= form_tag pages_path, method: :get do %>
+        <p>
+          <%= text_field_tag :q, nil, placeholder: "Search" %>
+        </p>
+      <% end %>
+    </div>
+  </div>
+</div>
+<br><br />
 
 <% @pages.each do |page| %>
   <div class="row">
