--- a/app/views/application/landing.html.erb
+++ b/app/views/application/landing.html.erb
@@ -9,7 +9,7 @@
     <div class="text-center logo">
       <h1>Scrive</h1>
       <p>Write, clutter free.</p>
-      <%= link_to "Sign up", new_subscription_path, class: "btn btn-default" %>
+      <%= link_to "Sign up", new_subscribe_path, class: "btn btn-default" %>
     </div>
   </div>
 </div>
