--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -2,6 +2,33 @@
   <div class="col-md-6 col-md-offset-3 subscribe">
     <h2>Subscribe to <span class="logo">Scrive</span></h2>
     <hr>
-    <a href="https://plasso.co/s/R8WNkPOusO" class="btn btn-success" target="_blank">Subscribe</a>
+    <%= form_tag subscription_path, id: "payment-form" do %>
+        <span class="payment-errors"></span>
+
+        <div class="form-row">
+          <label>
+            <span>Card Number</span>
+            <input type="text" size="20" data-stripe="number"/>
+          </label>
+        </div>
+
+        <div class="form-row">
+          <label>
+            <span>CVC</span>
+            <input type="text" size="4" data-stripe="cvc"/>
+          </label>
+        </div>
+
+        <div class="form-row">
+          <label>
+            <span>Expiration (MM/YYYY)</span>
+            <input type="text" size="2" data-stripe="exp-month"/>
+          </label>
+          <span> / </span>
+          <input type="text" size="4" data-stripe="exp-year"/>
+        </div>
+
+        <button type="submit">Submit Payment</button>
+    <% end %>
   </div>
 </div>
