--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,7 @@
 
 <div class="row">
   <div class="col-md-1">
-    <% if current_user_subscribed? %>
+    <% if current_user %>
       <%= link_to 'P', new_page_path, class: "btn btn-primary btn-circle btn-lg active" %>
     <% else %>
       <%= link_to "Subscribe to start writing", new_subscribe_path %>
