--- a/app/views/application/landing.html.erb
+++ b/app/views/application/landing.html.erb
@@ -9,7 +9,8 @@
     <div class="text-center logo">
       <h1>Scrive</h1>
       <p>Write, clutter free.</p>
-      <%= link_to "Sign up", new_subscribe_path, class: "btn btn-default" %>
+      <%= link_to "Sign up", new_user_registration_path, class: "btn btn-default" %>
+      <p><%= link_to "Original draft", "https://medium.com/p/a6a1110435c2", target: "_blank" %></p>
     </div>
   </div>
 </div>
