--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,8 +6,8 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3 sign_up">
-    <p><span class="logo">Scrive</span> is simple. It's design for clutter free writing. The first two weeks are free. The cost is $6 per month. Want more info? 
-      <%= link_to "Check out this behind the scenes breakdown", "https://medium.com/p/a6a1110435c2/edit", target: "_blank" %>. Enjoy :)</p>
+    <p><span class="logo">Scrive</span> is simple. It's design for clutter free writing and it's free to use ;) <br> <br> Want more info? 
+      <%= link_to "Check out this behind the scenes breakdown", "https://medium.com/p/a6a1110435c2", target: "_blank" %>. Enjoy :)</p>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
