--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -46,6 +46,13 @@
     </div>
   <% end %>
 <% end %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <div class="text-center">
+      <%= will_paginate @pages %>
+    </div>
+  </div>
+</div>
 
   
 
