--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -30,21 +30,9 @@
   </div>
   <br><br />
 
-  <% @pages.each do |page| %>
-    <div class="row">
-      <div class="col-md-10 col-md-offset-2">
-        <div class="col-md-8">
-          <%= link_to 'VIEW', page %> |
-          <%= link_to 'EDIT', edit_page_path(page) %> |
-          <%= link_to 'DELETE', page, method: :delete, data: { confirm: 'Are you sure?' } %>
-          <br><br />
-          <p class="time text-muted"><%= page.created_at.strftime("%b %d, %Y") %></p>
-          <%= page.body.html_safe %>
-          <hr class="articlesplit"></hr>
-        </div>
-      </div>
-    </div>
-  <% end %>
+  <div id="pages">
+    <%= render @pages %>
+  </div>
 <% end %>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
